# quintessence

./: .gitignore  LICENSE  README.md  quintessence.cabal  stack.yaml
src/: Lexer.hs  Parser.hs  Syntax.hs
