name:                quintessence
version:             0.0.0.0
synopsis:            Functional programming language targeting the EVM
description:         Please see README.md
homepage:            https://github.com/toonn/quintessence#readme
license:             BSD2
license-file:        LICENSE
author:              Toon Nolten
maintainer:          toon@nolten.sh
copyright:           2017 Toon Nolten
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Syntax
                       Lexer
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , scientific
  default-language:    Haskell2010

executable quintessence-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , quintessence
  default-language:    Haskell2010

test-suite quintessence-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quintessence
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toonn/quintessence
